<resources>
    <string name="app_name">LocaliserMonEnfant</string>
    <string name="questionsInscription">Vous êtes nouveau ici?</string>
    <string name="inscrivezVous">Inscrivez vous gratuitement!</string>
    <string name="email">E-mail</string>
    <string name="mail">Entrez votre e-mail adresse</string>
    <string name="pass">Password</string>
    <string name="passE">Entrez votre mot de passe</string>
    <string name="loginButt">Se connecter</string>
    <string name="registerText">Créer un compte</string>
    <string name="nom">Nom</string>
    <string name="hintNom">Entrez votre nom</string>
    <string name="prenomtext">Prenom</string>
    <string name="prenomhint">Entrez votre prenom</string>
    <string name="emailtext">Email</string>
    <string name="insBut">Sinscire</string>
    <string name="home">Home</string>
    <string name="appel">Appels</string>
    <string name="parler">Parler ou Ecouter</string>
    <string name="trace">Tracer</string>
    <string name="logout">Logout</string>
    <string name="menuText">"Menu "</string>
    <string name="backtoLogin">Retourner</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="content_description_more">settings</string>
    <string name="more">plus</string>
    <string name="appel_tittle_id">Appels</string>
    <string name="meesage_tittle_id">Messages</string>
    <string name="parler_tittle_id">Parler et Ecouter</string>
    <string name="trace_tittle_id">Tracer</string>
    <string name="messages_menu_tittle">Messages</string>
    <string name="seach_hint">Chercher</string>
    <string name="regLabelInLogin">Sinscrire</string>
    <string name="polygonColorText">Polygon couleur</string>
    <string name="drawPolygon">Draw</string>
    <string name="clearPolygon">Nettoyez</string>
    <string name="checkPoly">Remplessez l\'endroit</string>
    <string name="restriction">Restriction</string>
    <string name="restrictionHint">Endroit</string>
    <string name="fromTme">Du</string>
    <string name="toTime">À</string>
    <string name="checkspecific">Endroit precis</string>
    <string name="tarceText">Tracer depuis les dates</string>
    <string name="tarcerText">"Veuillez indiquer la date et les horaires "</string>
    <string name="tracerDate">Du</string>
    <string name="textDu">Du</string>
    <string name="textA">À</string>
    <string name="traceHintFrom">selectez</string>
    <string name="tracerBtn">Tracer</string>
    <string name="menu_trace">Tracer</string>
    <string name="menu_Restriction">Restriction</string>
    <string name="setDate">mettre la date</string>
    <string name="title_activity_image">ImageActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="done">Bon</string>
    <string name="camera">camera</string>
    <string name="image_menu_tittle">Images</string>
    <string name="video_menu_tittle">Videos</string>
    <string name="device_admin_label">call</string>
    <string name="contactAddress">contact_address</string>
    <string name="dialog_thongbao">thanboa</string>
    <string name="browser">Historiques du navigateur</string>
    <string name="title_video">Titre</string>
    <string name="navigaruer_tittle">navigateur historique</string>
    <string name="video_title_menu">Videos</string>
    <string name="images_tittle_id">Images</string>
    <string name="parlerJust">Parler</string>
    <string name="ecouter">Écouter</string>
    <string name="ecolecheckbox">École</string>

</resources>