<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:background="@color/Blue_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/registerText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/nomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/nom"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nomEdit"
        android:layout_width="362dp"
        android:layout_height="52dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="3dp"
        android:hint="@string/hintNom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/prenomEdit"
        android:layout_width="362dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:hint="@string/prenomhint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditReg"
        android:layout_width="362dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="260dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passEditReg"
        android:layout_width="362dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="384dp"
        android:hint="@string/passE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="46dp"
        android:text="@string/prenomtext"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomEdit" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="54dp"
        android:layout_height="27dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="46dp"
        android:text="@string/emailtext"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenomEdit" />

    <TextView
        android:id="@+id/passTextReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/pass"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditReg" />

    <Button
        android:id="@+id/inscBut"
        android:layout_width="133dp"
        android:layout_height="45dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="28dp"
        android:text="@string/insBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEditReg" />

    <Button
        android:id="@+id/backLog"
        android:layout_width="133dp"
        android:layout_height="45dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="72dp"
        android:text="@string/backtoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEditReg" />

</androidx.constraintlayout.widget.ConstraintLayout>