<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    >

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_activity"
        android:theme="@style/navigationTheme"
        app:menu="@menu/activity_main_drawer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/app_bar_home"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="@string/menu_Restriction" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.appbar.AppBarLayout>



            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            </androidx.fragment.app.FragmentContainerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_600"
                android:layout_marginTop="350dp"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkPoly"
        android:text="@string/checkPoly"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/specificEndroidCheck"
        android:text="@string/checkspecific"
        android:textColor="@color/white"
        />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polygonColorText"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="255"
                    android:progressTint="#EF7784"
                    android:thumbTint="#EF7784" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="255"
                    android:progressTint="#FFEDED7F"
                    android:thumbTint="#EDED7F" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="255"
                    android:progressTint="#FFBFED7F"
                    android:thumbTint="#FFBFED7F" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                  android:id="@+id/restrictionText"
                    android:visibility="invisible"
                    android:hint="@string/restrictionHint"
                    android:textColorHint="@color/white"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                   >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fromTime"
                        android:visibility="invisible"
                        android:hint="@string/fromTme"
                        android:layout_marginRight="30dp"
                        android:textColorHint="@color/white"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/toTime"
                        android:id="@+id/toTime"
                        android:visibility="invisible"
                        android:layout_marginLeft="10dp"
                        android:textColorHint="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawPolygon"
                        android:id="@+id/btn_draw"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="40dp"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clearPolygon"
                        android:id="@+id/btn_clear"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>




