<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/Blue_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="76dp"
        android:text="@string/questionsInscription"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="28dp"
        android:text="@string/inscrivezVous"
        android:textColor="#F8F5F5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/regButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="132dp"
        android:background="@color/orange_500"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:srcCompat="@drawable/regicon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/log" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mailEdit"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/mail"
        app:layout_constraintBottom_toTopOf="@+id/passEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passEdit"
        android:layout_width="287dp"
        android:layout_height="46dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/passE"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailEdit" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="56dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="21dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/mailEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="12dp"
        android:text="@string/pass"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/passEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="292dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/loginButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEdit" />

    <Button
        android:id="@+id/regLog"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="25dp"
        android:text="@string/regLabelInLogin"

        android:textColor="@color/white"
        android:textColorHighlight="@color/orange_500"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintTop_toTopOf="@+id/topView" />


</androidx.constraintlayout.widget.ConstraintLayout>