<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="416dp"
        android:layout_height="140dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="40dp"
        android:background="@color/Blue_700"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="76dp"
        android:text="@string/questionsInscription"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="28dp"
        android:text="@string/inscrivezVous"
        android:textColor="#F8F5F5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/regButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="23dp"
        android:background="@color/orange_500"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/regicon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="231dp"
        android:layout_height="99dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toTopOf="@+id/mailEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        app:srcCompat="@drawable/log" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mailEdit"
        android:layout_width="281dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="136dp"
        android:hint="@string/mail"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passEdit"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="84dp"
        android:hint="@string/passE"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="56dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="40dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="547dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="560dp"
        android:text="@string/pass"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="200dp"
        android:text="@string/loginButt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/regLog"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="11dp"
        android:text="@string/regLabelInLogin"
        android:textColor="@color/white"

        android:textColorHighlight="@color/orange_500"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="@+id/topView" />


</androidx.constraintlayout.widget.ConstraintLayout>